Creating a new .NET Standard project

--- a/PDFiller/PDFiller.Domain.Tests/PDFiller.Domain.Tests.csproj
+++ b/PDFiller/PDFiller.Domain.Tests/PDFiller.Domain.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PDFiller.Core\PDFiller.Core.csproj" />
+    <ProjectReference Include="..\PDFiller.Domain\PDFiller.Domain.csproj" />
   </ItemGroup>
 
 </Project>
