--- a/PDFiller/PDFiller/PDFiller.csproj
+++ b/PDFiller/PDFiller/PDFiller.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PDFiller.Domain\PDFiller.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
