--- a/PDFiller/PDFiller.Domain.Tests/PDFiller.Domain.Tests.csproj
+++ b/PDFiller/PDFiller.Domain.Tests/PDFiller.Domain.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -16,6 +16,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PDFiller.Domain\PDFiller.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="SamplePDFs\PRP-1-bos.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
