--- a/PDFiller/PDFiller.CSharpCodeGeneration.Tests/PDFiller.CSharpCodeGeneration.Tests.csproj
+++ b/PDFiller/PDFiller.CSharpCodeGeneration.Tests/PDFiller.CSharpCodeGeneration.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -7,6 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="SampleCodeFiles\SamplePoco.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="SampleCodeFiles\SamplePoco.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
@@ -14,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PDFiller.Domain\PDFiller.Domain.csproj" />
+    <ProjectReference Include="..\PDFiller.CSharpCodeGeneration\PDFiller.CSharpCodeGeneration.csproj" />
   </ItemGroup>
 
 </Project>
