--- a/PDFiller/PDFiller.PDFManipulation.Tests/PDFiller.PDFManipulation.Tests.csproj
+++ b/PDFiller/PDFiller.PDFManipulation.Tests/PDFiller.PDFManipulation.Tests.csproj
@@ -7,21 +7,32 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="SampleCodeFiles\SamplePoco.cs" />
+    <None Remove="SamplePDFs\PRP-1-bos.pdf" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="SampleCodeFiles\SamplePoco.cs">
+    <Content Include="SamplePDFs\PRP-1-bos.pdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.6.0" />
+    <PackageReference Include="itext7" Version="7.1.11" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PDFiller.Domain\PDFiller.Domain.csproj" />
+    <ProjectReference Include="..\PDFiller.PDFManipulation\PDFiller.PDFManipulation.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="SamplePDFs\PRP-1-bos.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
 
 </Project>
