--- a/PDFiller/PDFiller.Domain.Tests/PDFiller.Domain.Tests.csproj
+++ b/PDFiller/PDFiller.Domain.Tests/PDFiller.Domain.Tests.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="SamplePDFs\PRP-1-bos.pdf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="SamplePDFs\PRP-1-bos.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
