--- a/PDFiller/PDFiller.RazorCodeGeneration/PDFiller.RazorCodeGeneration.csproj
+++ b/PDFiller/PDFiller.RazorCodeGeneration/PDFiller.RazorCodeGeneration.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="bunit" Version="1.0.0-beta-7" />
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.4" />
   </ItemGroup>
 
