--- a/PDFiller/PDFiller.Runner/PDFiller.Runner.csproj
+++ b/PDFiller/PDFiller.Runner/PDFiller.Runner.csproj
@@ -6,11 +6,30 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="SamplePDFs\PRP-1-bos.pdf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="SamplePDFs\PRP-1-bos.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PDFiller.CSharpCodeGeneration\PDFiller.CSharpCodeGeneration.csproj" />
     <ProjectReference Include="..\PDFiller.Domain\PDFiller.Domain.csproj" />
     <ProjectReference Include="..\PDFiller.PDFManipulation\PDFiller.PDFManipulation.csproj" />
     <ProjectReference Include="..\PDFiller.RazorCodeGeneration\PDFiller.RazorCodeGeneration.csproj" />
     <ProjectReference Include="..\PDFiller\PDFiller.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="SamplePDFs\TextBoxAndCheckBoxForm.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="SamplePDFs\TextBoxForm.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
