--- a/PDFiller/PDFiller/PDFiller.csproj
+++ b/PDFiller/PDFiller/PDFiller.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -16,6 +16,12 @@
   <ItemGroup>
     <ProjectReference Include="..\PDFiller.Domain\PDFiller.Domain.csproj" />
     <ProjectReference Include="..\PDFiller.PDFManipulation\PDFiller.PDFManipulation.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="wwwroot\sample-data\src.pdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
