--- a/PDFiller/PDFiller.Domain/PDFiller.Domain.csproj
+++ b/PDFiller/PDFiller.Domain/PDFiller.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Diacritics" Version="2.1.20036.1" />
+  </ItemGroup>
+
 </Project>
