--- a/PDFiller/PDFiller.WebsiteGenerator/PDFiller.WebsiteGenerator.csproj
+++ b/PDFiller/PDFiller.WebsiteGenerator/PDFiller.WebsiteGenerator.csproj
@@ -4,4 +4,11 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="bunit" Version="1.0.0-beta-7" />
+    <PackageReference Include="itext7" Version="7.1.11" />
+    <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.4" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.5.0" />
+  </ItemGroup>
+
 </Project>
