--- a/PDFiller/PDFiller.WebsiteGenerator/PDFiller.WebsiteGenerator.csproj
+++ b/PDFiller/PDFiller.WebsiteGenerator/PDFiller.WebsiteGenerator.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PDFiller.Domain\PDFiller.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
