Changing the path of PDF form file

--- a/PDFiller/PDFiller.Website/PDFiller.Website.csproj
+++ b/PDFiller/PDFiller.Website/PDFiller.Website.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="wwwroot\sample-data\src.pdf">
+    <Content Update="wwwroot\src.pdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
