Renaming PDFiller.Domain to PDFiller.Models

--- a/PDFiller/PDFiller.WebsiteGenerator.Tests/PDFiller.WebsiteGenerator.Tests.csproj
+++ b/PDFiller/PDFiller.WebsiteGenerator.Tests/PDFiller.WebsiteGenerator.Tests.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PDFiller.Domain\PDFiller.Domain.csproj" />
+    <ProjectReference Include="..\PDFiller.Models\PDFiller.Models.csproj" />
     <ProjectReference Include="..\PDFiller.WebsiteGenerator\PDFiller.WebsiteGenerator.csproj" />
   </ItemGroup>
 
