--- a/PDFiller/PDFiller.Website/PDFiller.Website.csproj
+++ b/PDFiller/PDFiller.Website/PDFiller.Website.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PDFiller.Domain\PDFiller.Domain.csproj" />
+    <ProjectReference Include="..\PDFiller.Models\PDFiller.Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
